@@ -48,6 +48,18 @@ public class EnableIstioAnnotationProcessor {
         } else {
             editVirtualService(enableIstioAnnotation, vs);
         }
+
+        if (enableIstioAnnotation.enableGateway()) {
+            Resource<Gateway> gateway = istioClient
+                    .v1beta1()
+                    .gateways()
+                    .withName(istioService.getApplicationName());
+            if (gateway.item() == null) {
+                createNewGateway(enableIstioAnnotation);
+            } else {
+                editGateway(enableIstioAnnotation, gateway);
+            }
+        }
     }
 
     private void createNewDestinationRule(EnableIstio enableIstioAnnotation) {
@@ -61,28 +73,21 @@ public class EnableIstioAnnotationProcessor {
                 .withTrafficPolicy(istioService.buildCircuitBreaker(enableIstioAnnotation))
                 .endSpec()
                 .build();
-        istioClient.v1beta1().destinationRules().create(dr);
+        dr = istioClient.v1beta1().destinationRules().resource(dr).create();
         LOGGER.info("New DestinationRule created: \n{}", Serialization.asYaml(dr));
     }
 
     private void editDestinationRule(EnableIstio enableIstioAnnotation, Resource<DestinationRule> resource) {
         LOGGER.info("Found DestinationRule: {}", resource.item());
         if (!enableIstioAnnotation.version().isEmpty()) {
-            DestinationRule rule = (DestinationRule) resource;
-            Optional<Subset> subset = rule.getSpec().getSubsets().stream()
+            DestinationRule dr = (DestinationRule) resource;
+            Optional<Subset> subset = dr.getSpec().getSubsets().stream()
                     .filter(s -> s.getName().equals(enableIstioAnnotation.version()))
                     .findAny();
-            rule.getSpec().getSubsets().addAll(List.of(istioService.buildSubset(enableIstioAnnotation)));
-            rule.getSpec().setTrafficPolicy(istioService.buildCircuitBreaker(enableIstioAnnotation));
-            istioClient.v1beta1().destinationRules().createOrReplace(rule);
-//            resource.edit()
-//                    .editSpec()
-//                    .addAllToSubsets(subset.isEmpty() ? Collections.singletonList(istioService.buildSubset(enableIstioAnnotation)) :
-//                            Collections.emptyList())
-//                    .editOrNewTrafficPolicyLike(istioService.buildCircuitBreaker(enableIstioAnnotation))
-//                    .endTrafficPolicy()
-//                    .endSpec()
-//                    .done();
+            dr.getSpec().getSubsets().addAll(List.of(istioService.buildSubset(enableIstioAnnotation)));
+            dr.getSpec().setTrafficPolicy(istioService.buildCircuitBreaker(enableIstioAnnotation));
+            dr = istioClient.v1beta1().destinationRules().resource(dr).update();
+            LOGGER.info("DestinationRule updated: \n{}", Serialization.asYaml(dr));
         }
     }
 
@@ -91,18 +96,20 @@ public class EnableIstioAnnotationProcessor {
                 .withNewMetadata().withName(istioService.getVirtualServiceName()).endMetadata()
                 .withNewSpec()
                 .addToHosts(istioService.getApplicationName())
+                .addToGateways(enableIstioAnnotation.enableGateway() ? istioService.getApplicationName() : null)
                 .addNewHttp()
                 .withMatch(Arrays.stream(enableIstioAnnotation.matches())
                         .map(m -> istioService.buildHTTPMatchRequest(m))
                         .toArray(HTTPMatchRequest[]::new))
                 .withTimeout(enableIstioAnnotation.timeout() == 0 ? null : formatDuration(enableIstioAnnotation.timeout(), "s's'"))
+                .withFault(enableIstioAnnotation.fault().percentage() == 0 ? null : istioService.buildFault(enableIstioAnnotation))
                 .withRetries(istioService.buildRetry(enableIstioAnnotation))
                 .addNewRoute().withNewDestinationLike(istioService.buildDestination(enableIstioAnnotation))
                 .endDestination().endRoute()
                 .endHttp()
                 .endSpec()
                 .build();
-        vs = istioClient.v1beta1().virtualServices().create(vs);
+        vs = istioClient.v1beta1().virtualServices().resource(vs).create();
         LOGGER.info("New VirtualService created: \n{}", Serialization.asYaml(vs));
     }
 
@@ -110,26 +117,50 @@ public class EnableIstioAnnotationProcessor {
         LOGGER.info("Found VirtualService: {}", resource.item());
         if (!enableIstioAnnotation.version().isEmpty()) {
             VirtualService vs = (VirtualService) resource;
+            vs.getSpec().setHosts(List.of(istioService.getApplicationName()));
+            vs.getSpec().setGateways(enableIstioAnnotation.enableGateway() ? List.of(istioService.getApplicationName()) : null);
             vs.getSpec().getHttp().get(0).setTimeout(enableIstioAnnotation
                     .timeout() == 0 ? null : formatDuration(enableIstioAnnotation.timeout(), "s's'"));
             vs.getSpec().getHttp().get(0).setRetries(istioService.buildRetry(enableIstioAnnotation));
+            vs.getSpec().getHttp().get(0).setFault(enableIstioAnnotation.fault().percentage() == 0 ? null : istioService.buildFault(enableIstioAnnotation));
             vs.getSpec().getHttp().get(0).getRoute().get(0).setWeight(enableIstioAnnotation.weight() == 0 ? null : enableIstioAnnotation.weight());
             vs.getSpec().getHttp().get(0).getRoute().get(0).setDestination(istioService.buildDestination(enableIstioAnnotation));
-            istioClient.v1beta1().virtualServices().createOrReplace(vs);
-//            istioClient.v1beta1VirtualService().withName(istioService.getVirtualServiceName())
-//                    .edit()
-//                    .editSpec()
-//                    .editFirstHttp()
-//                    .withTimeout(enableIstioAnnotation
-//                            .timeout() == 0 ? null : new Duration(0, (long) enableIstioAnnotation.timeout()))
-//                    .withRetries(istioService.buildRetry(enableIstioAnnotation))
-//                    .editFirstRoute()
-//                    .withWeight(enableIstioAnnotation.weight() == 0 ? null : enableIstioAnnotation.weight())
-//                    .editOrNewDestinationLike(istioService.buildDestination(enableIstioAnnotation)).endDestination()
-//                    .endRoute()
-//                    .endHttp()
-//                    .endSpec()
-//                    .done();
+            vs = istioClient.v1beta1().virtualServices().resource(vs).update();
+            LOGGER.info("VirtualService updated: \n{}", Serialization.asYaml(vs));
         }
     }
+
+    private void createNewGateway(EnableIstio enableIstioAnnotation) {
+        Gateway gateway = new GatewayBuilder()
+                .withNewMetadata().withName(istioService.getApplicationName()).endMetadata()
+                .withNewSpec()
+                .addToSelector("istio", "ingressgateway")
+                .addToServers(new ServerBuilder()
+                        .withPort(new PortBuilder()
+                                .withNumber(80)
+                                .withProtocol("HTTP")
+                                .withName("http")
+                                .build())
+                        .addToHosts(istioService.getApplicationName() + ".ext")
+                        .build())
+                .endSpec()
+                .build();
+        gateway = istioClient.v1beta1().gateways().resource(gateway).create();
+        LOGGER.info("New Gateway created: \n{}", Serialization.asYaml(gateway));
+    }
+
+    private void editGateway(EnableIstio enableIstioAnnotation, Resource<Gateway> resource) {
+        LOGGER.info("Found Gateway: {}", resource.item());
+        Gateway gateway = (Gateway) resource;
+        if (gateway.getSpec().getServers() != null && !gateway.getSpec().getServers().isEmpty()) {
+            Server server = gateway.getSpec().getServers().get(0);
+            String appHost = istioService.getApplicationName() + ".ext";
+            if (server.getHosts() != null && !server.getHosts().contains(appHost)) {
+                server.getHosts().add(appHost);
+            }
+        }
+        gateway = istioClient.v1beta1().gateways().resource(gateway).update();
+        LOGGER.info("Gateway updated: \n{}", Serialization.asYaml(gateway));
+    }
+
 }
